--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 
     span {
       color: #d01418;
-      font-size: 25px;
+      font-size: 30px;
       font-weight: 400px;
       line-height: 30px;
       margin-left: 3px;
@@ -38,7 +38,8 @@ body {
   }
 }
 
-nav {
+nav,
+.footer {
   display: flex;
   padding: 10px 30px;
   align-items: center;
@@ -78,6 +79,7 @@ nav ul li a {
   background-size: cover;
 }
 h1 {
+  text-align: center;
   color: #f3f3f3;
   font-size: 40px;
   font-weight: 700px;
@@ -111,41 +113,53 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #d01418;
+  flex-wrap: wrap;
 }
 .detroit,
 .fifa,
 .mk2 {
   background-color: #ffffff;
-  padding: 30px;
-  margin: 30px;
+  margin: 50px;
   border-radius: 5px;
-  
+  width: 450px;
+  height: 500px;
 
   img {
-    margin: 30px 68px 128px 68px;
-    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 50px;
+    width: 350px;
+    height: 400px;
   }
 }
-hr{
-    
-    border-top: 1px solid red;
-
-
+hr {
+  border-top: 1px solid rgba(34, 34, 34, 0.2);
+  margin-bottom: 20px;
 }
 
-h3{
-    color: #000;
-    font-size: 20px;
-    font-weight: 400px;
+h3 {
+  color: #000;
+  font-size: 20px;
+  font-weight: 400px;
 }
-h4{
-    color: #000;
-    font-size: 13px;
-    font-weight: 400px;
+h4 {
+  color: #000;
+  font-size: 13px;
+  font-weight: 400px;
 }
-h5{
-    color: #619D00;
-    font-size: 10px;
-    font-weight: 400px;
+h5 {
+  color: #619d00;
+  font-size: 10px;
+  font-weight: 400px;
+}
+.precios {
+  padding-left: 20px;
+}
+.productos_estrellas {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 500px;
 }
